# 3DViewer

./: README.md
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/model/: model.cc  model.h  object.cc  object.h
src/model/object_modify_strategy/: modify.h  object_centering.cc  object_centering.h  object_rotate.cc  object_rotate.h  object_scale.cc  object_scale.h  object_translation.cc  object_translation.h  strategy_modify.h
src/tests/: tests.cc
src/view/: application.cc  application.h  application.ui  openglwidget.cc  openglwidget.h  resource.qrc
